# modrinthium

./: .containerignore  .gitignore  CLAUDE.md  Cargo.toml  NOTICE.md  README.md  crowdin.yml  package.json  pnpm-lock.yaml
.github/workflows/: prepare-pnpm-cache.yml  theseus-build.yml  theseus-release.yml  turbo-ci.yml
apps/app/: COPYING.md  Cargo.toml  README.md  build.rs  tauri-release.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/app-frontend/: index.html
apps/app-frontend/src/: App.vue  routes.js
apps/app-frontend/src/components/: RowDisplay.vue
apps/app-frontend/src/components/ui/: AccountsCard.vue  ErrorModal.vue  ExportModal.vue  SeedInstallModal.vue  SeedUpdateBanner.vue  SplashScreen.vue
apps/app-frontend/src/components/ui/friends/: FriendsList.vue
apps/app-frontend/src/components/ui/minecraft-auth-error-modal/: MinecraftAuthErrorModal.vue  minecraft-auth-errors.ts
apps/app-frontend/src/components/ui/modal/: AppSettingsModal.vue  InstallToPlayModal.vue  SeedPublishModal.vue  SeedUpdateToPlayModal.vue
apps/app-frontend/src/components/ui/settings/: AppearanceSettings.vue
apps/app-frontend/src/components/ui/world/: InstanceItem.vue
apps/app-frontend/src/helpers/: analytics.ts  events.js  install.ts  seed.ts  utils.js
apps/app-frontend/src/locales/ar-SA/: index.json
apps/app-frontend/src/locales/cs-CZ/: index.json
apps/app-frontend/src/locales/da-DK/: index.json
apps/app-frontend/src/locales/de-CH/: index.json
apps/app-frontend/src/locales/de-DE/: index.json
apps/app-frontend/src/locales/en-US/: index.json
apps/app-frontend/src/locales/es-419/: index.json
apps/app-frontend/src/locales/es-ES/: index.json
apps/app-frontend/src/locales/fi-FI/: index.json
apps/app-frontend/src/locales/fil-PH/: index.json
apps/app-frontend/src/locales/fr-FR/: index.json
apps/app-frontend/src/locales/he-IL/: index.json
apps/app-frontend/src/locales/hu-HU/: index.json
apps/app-frontend/src/locales/id-ID/: index.json
apps/app-frontend/src/locales/it-IT/: index.json
apps/app-frontend/src/locales/ja-JP/: index.json
apps/app-frontend/src/locales/ko-KR/: index.json
apps/app-frontend/src/locales/ms-MY/: index.json
apps/app-frontend/src/locales/nl-NL/: index.json
apps/app-frontend/src/locales/no-NO/: index.json
apps/app-frontend/src/locales/pl-PL/: index.json
apps/app-frontend/src/locales/pt-BR/: index.json
apps/app-frontend/src/locales/pt-PT/: index.json
apps/app-frontend/src/locales/ro-RO/: index.json
apps/app-frontend/src/locales/ru-RU/: index.json
apps/app-frontend/src/locales/sr-CS/: index.json
apps/app-frontend/src/locales/sv-SE/: index.json
apps/app-frontend/src/locales/th-TH/: index.json
apps/app-frontend/src/locales/tr-TR/: index.json
apps/app-frontend/src/locales/uk-UA/: index.json
apps/app-frontend/src/locales/vi-VN/: index.json
apps/app-frontend/src/locales/zh-CN/: index.json
apps/app-frontend/src/locales/zh-TW/: index.json
apps/app-frontend/src/pages/: Index.vue  index.js
apps/app-frontend/src/pages/instance/: Index.vue  Mods.vue
apps/app/capabilities/: plugins.json
apps/app/icons/: icon.icns
apps/app/nsis/: hooks.nsi
apps/app/src/: main.rs
apps/app/src/api/: auth.rs  mod.rs  seed.rs
apps/app/src/api/oauth_utils/auth_code_reply/: page.html
apps/app/src/api/shortcuts/: linux.rs  mod.rs
apps/seed-server/: Cargo.toml  Dockerfile  README.md
apps/seed-server/k8s/: manifests.yaml  secret.example.yaml
apps/seed-server/src/: main.rs
scripts/: coverage-i18n.ts  i18n-import-check.ts
