[workspace]
resolver = "2"
members = [
  "apps/app",
  "apps/seed-server",
  "packages/app-lib",
  "packages/ariadne",
  "packages/daedalus",
  "packages/modrinth-content-management",
  "packages/path-util",
]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
repository = "https://github.com/modrinth/code"

[workspace.dependencies]
ariadne = { path = "packages/ariadne" }
async-minecraft-ping = { path = "packages/async-minecraft-ping" }
async-recursion = "1.1.1"
async-trait = "0.1.89"
async-tungstenite = { version = "0.31.0", default-features = false, features = [
  "futures-03-sink"
] }
async-walkdir = "2.1.0"
async_zip = "0.0.18"
base64 = "0.22.1"
bon = "3.9.3"
bytemuck = "1.24.0"
bytes = "1.10.1"
chardetng = "0.1.17"
chrono = "0.4.42"
cidre = { version = "0.15.0", default-features = false, features = [
  "macos_15_0"
] }
daedalus = { path = "packages/daedalus" }
dashmap = "6.1.0"
data-url = "0.3.2"
derive_more = "2.1.1"
dirs = "6.0.0"
discord-rich-presence = "1.0.0"
dotenvy = "0.15.7"
dunce = "1.0.5"
either = "1.15.0"
encoding_rs = "0.8.35"
enumset = "1.1.10"
eyre = "0.6.12"
flate2 = "1.1.4"
fs4 = { version = "0.13.1", default-features = false }
futures = "0.3.31"
futures-lite = "2.6.1"
heck = "0.5.0"
hickory-resolver = "0.25.2"
hyper = "1.7.0"
hyper-util = "0.1.17"
indicatif = "0.18.0"
itertools = "0.14.0"
modrinth-content-management = { path = "packages/modrinth-content-management" }
native-dialog = "0.9.2"
notify = { version = "8.2.0", default-features = false }
notify-debouncer-mini = { version = "0.7.0", default-features = false }
p256 = "0.13.2"
parking_lot = "0.12.5"
paste = "1.0.15"
path-util = { path = "packages/path-util" }
phf = { version = "0.13.1", features = ["macros"] }
png = "0.18.0"
quartz_nbt = "0.2.9"
quick-xml = "0.38.3"
rand = "=0.8.5"  # Locked on 0.8 until argon2 and p256 update to 0.9
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false }
rgb = "0.8.52"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_cbor = "0.11.2"
serde_ini = "0.2.0"
serde_json = "1.0.145"
serde_with = "3.15.0"
sha1_smol = { version = "1.0.1", features = ["std"] }
sha2 = "0.10.9"
shlex = "1.3.0"
sqlx = { version = "0.8.6", default-features = false }
sysinfo = { version = "0.37.2", default-features = false }
tauri = "2.8.5"
tauri-build = "2.4.1"
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-opener = "2.5.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = { git = "https://github.com/modrinth/plugins-workspace", rev = "0d30f2aa28ec668ce187d527da1c475da3c01cbc", default-features = false, features = [
  "rustls-tls",
  "zip",
] }
tauri-plugin-window-state = "2.4.0"
tempfile = "3.23.0"
theseus = { path = "packages/app-lib" }
thiserror = "2.0.17"
tokio = "1.47.1"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.20"
typed-path = "0.12.0"
url = "2.5.7"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "decimal"] }
uuid = "1.18.1"
whoami = "1.6.1"
windows = "=0.61.3"  # Locked on 0.61 until we can update windows-core to 0.62
windows-core = "=0.61.2"  # Locked on 0.61 until webview2-com updates to 0.62
winreg = "0.55.0"
zbus = "5.11.0"
zip = { version = "6.0.0", default-features = false, features = [
  "bzip2",
  "deflate",
  "deflate64",
  "zstd",
] }

[workspace.lints.clippy]
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
cfg_not_test = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
format_push_string = "warn"
get_unwrap = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
map_unwrap_or = "allow"
match_bool = "warn"
needless_collect = "warn"
negative_feature_names = "warn"
non_std_lazy_statics = "warn"
pathbuf_init_then_push = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
result_large_err = "allow"
todo = "warn"
too_many_arguments = "allow"
type_complexity = "allow"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
wildcard_dependencies = "warn"

[profile.dev.package.sqlx-macros]
opt-level = 3

# Optimize for speed and reduce size on release builds
[profile.release]
opt-level = "s"  # Optimize for binary size
strip = true  # Remove debug symbols
lto = true  # Enables link to optimizations
panic = "abort"  # Strip expensive panic clean-up logic
